--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"	
-  },
+    "lint": "vue-cli-service lint"
+    },
   "dependencies": {
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
